--- a/bigcouch/bigcouch.yml
+++ b/bigcouch/bigcouch.yml
@@ -4,21 +4,24 @@
   vars:
    secret: clusterthis
   tasks:
-  #- name: enable the Cloudant repository
-  #  copy: src=cloudant.repo dest=/etc/yum.repos.d/cloudant.repo
+  - name: enable the Cloudant YUM repository
+    copy: src=cloudant.repo dest=/etc/yum.repos.d/cloudant.repo
 
-  - name: download and enable the EPEL repository definitions
+  - name: enable the EPEL YUM repository
     action: command rpm -Uvh --replacepkgs http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm 
+
+  - name: install Python httplib2
+    yum: name=python-httplib2 state=installed
 
   - name: disable the firewall for now
     service: name=iptables state=stopped
 
-  - name: print the ip address
-    debug: msg="ipaddress is ${ansible_eth1.ipv4.address}"
+  #- name: print the ip address
+  #  debug: msg="ipaddress is ${ansible_eth1.ipv4.address}"
     
-  - name: add entries in /etc/hosts to associate the hosts IP addresses with their hostnames
-    lineinfile: dest=/etc/hosts regexp='^${hostvars.${item}.ansible_eth1.ipv4.address}' state=present line='${hostvars.${item}.ansible_eth1.ipv4.address} ${hostvars.${item}.bar}' insertafter=EOF
-    with_items: '{{groups.bigcouchservers}}'
+  #- name: add entries in /etc/hosts to associate the hosts IP addresses with their hostnames
+  #  lineinfile: dest=/etc/hosts regexp='^${hostvars.${item}.ansible_eth1.ipv4.address}' state=present line='${hostvars.${item}.ansible_eth1.ipv4.address} ${hostvars.${item}.bar}' insertafter=EOF
+  #  with_items: '{{groups.bigcouchservers}}'
 
   - name: install BigCouch
     yum: name=bigcouch state=installed
@@ -31,20 +34,19 @@
     notify:
     - restart bigcouch 
 
-  - name: install Python httplib2
-    yum: name=python-httplib2 state=installed
-
   - name: check that we can ping BigCouch on port 5986
     uri: url=http://localhost:5986
 
-  - name: check that we can ping the CouchDB server on port 5984
+  - name: check that we can ping the underlying CouchDB server on port 5984
     uri: url=http://localhost:5984
 
   - name: add nodes to the cluster
-    uri: url=http://localhost:5986/nodes/${hostvars.${item}.bar} method=PUT body="{}" status_code=201
+    uri: url=http://localhost:5986/nodes/bigcouch@${hostvars.${item}.ansible_eth1.ipv4.address} method=PUT body="{}" status_code=201
     ignore_errors: yes
     with_items: '{{groups.bigcouchservers}}'
-    
+
+  - debug: msg="Head over to http://${ansible_eth1.ipv4.address}:5984/_utils to launch the Futon UI. You can use it to test that replication is working."
+  
   handlers:
   - name: restart bigcouch
     service: name=bigcouch state=restarted
