--- a/jozi-lug/nginx/nginx.yml
+++ b/jozi-lug/nginx/nginx.yml
@@ -2,7 +2,7 @@
 - hosts: webservers
   sudo: yes
   vars:
-   http_port: 8182
+   http_port: 8183
   tasks:
   - name: downloading and enable the EPEL repository definitions
     action: command rpm -Uvh --replacepkgs http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
@@ -16,6 +16,7 @@
     service: name=iptables state=stopped enabled=no
   - name: ensure that nginx runs at boot time.
     service: name=nginx enabled=yes
+  - debug: msg="Setup complete. Head over to http://${ansible_eth1.ipv4.address}:{{http_port}}"
   handlers:
   - name: restart nginx
     service: name=nginx state=restarted
